--- a/Beamer/Diapo.tex
+++ b/Beamer/Diapo.tex
@@ -401,12 +401,16 @@
 
 \section{Les Améliorations possibles}
 \begin{frame}
-  Améliorations :
+  Améliorations au profit du réalisme :
   \begin{itemize}
-    \item implémenter l'érosion ;
-    \item utilisation de la loi de Hooke et du module de Young~;
-    \item utilisation d'un modèle avec friction grâce a la loi de Coulomb~;
+    \item implémenter les altérations ;
+    \item implémentation de la loi de Hooke et du module de Young~;
+    \item implémentation d'un modèle avec friction grâce a la loi de Coulomb~;
     \item implémentation de l'inertie des cellules en fonction de leur masse.
+  \end{itemize}
+  Améliorations au profit de l'optimisation :
+  \begin{itemize}
+    \item regroupement de cellules en fonction de la profondeur.
   \end{itemize}
 \end{frame}
 
