Modification du diapo (conclusion)

--- a/Beamer/Diapo.tex
+++ b/Beamer/Diapo.tex
@@ -125,19 +125,6 @@
 \end{frame}
 
 \section{Les simulations}
-\subsection{Le système cellulaire}
-\begin{frame}
-  \begin{center}
-    \begin{figure}
-      \includegraphics[width=10cm]{Images/3100_cell.png}
-      \caption{Simulation par automate cellulaire après 3100 itérations.}
-    \end{figure}
-    \begin{figure}
-      \includegraphics[width=10cm]{Images/7100_cell.png}
-      \caption{Simulation par automate cellulaire après 7100 itérations.}
-    \end{figure}
-  \end{center}
-\end{frame}
 
 \subsection{Les cellules}
 \begin{frame}
@@ -405,18 +392,23 @@
   \begin{itemize}
     \item implémenter les altérations ;
     \item implémentation de la loi de Hooke et du module de Young~;
-    \item implémentation d'un modèle avec friction grâce a la loi de Coulomb~;
-    \item implémentation de l'inertie des cellules en fonction de leur masse.
+    \item implémentation de la loi de Coulomb~;
+    \item implémentation de l'inertie.
   \end{itemize}
   Améliorations au profit de l'optimisation :
   \begin{itemize}
-    \item regroupement de cellules en fonction de la profondeur.
+    \item regroupement de cellules en fonction de la profondeur~;
+    \item parallélisation des calculs (utilisation de l'accélération graphique).
   \end{itemize}
 \end{frame}
 
 \section{Conclusion}
 \begin{frame}
- 
+ \begin{center}
+  \begin{huge}
+   Fin
+  \end{huge} 
+ \end{center}
 \end{frame}
 
 
