--- a/Beamer/Diapo.tex
+++ b/Beamer/Diapo.tex
@@ -128,7 +128,8 @@
 
 \subsection{Les cellules}
 \begin{frame}
-  Cellule : plus petit élément incompressible, sphère de diamètre 1. \smallbreak
+  Cellule : plus petit élément incompressible.
+   \smallbreak
   Propriétés mutables :
   \begin{itemize}
    \item vélocité~;
@@ -137,7 +138,8 @@
   \end{itemize}
   Propriétés immuables :
   \begin{itemize}
-   \item plaque tectonique.
+   \item plaque tectonique.\\
+   Si plaque différente : cellules en collision
   \end{itemize}
   \begin{figure}
     \begin{center}
