--- a/Beamer/Diapo.tex
+++ b/Beamer/Diapo.tex
@@ -8,6 +8,7 @@
 \usepackage{colortbl}
 
 \useoutertheme{infolines}
+\setbeamersize{text margin left=1cm,text margin right=1cm}
 \usetikzlibrary{arrows}
 \definecolor{qqwuqq}{rgb}{0,0.39,0}
 \definecolor{xdxdff}{rgb}{0.49,0.49,1}
