Diapos Érosion et Altérations

--- a/Beamer/Diapo.tex
+++ b/Beamer/Diapo.tex
@@ -51,25 +51,13 @@
   \begin{center}
     \begin{figure}
       \includegraphics[width=4.5cm]{Images/Diapos/Alteration/Physique/cryoclastie.jpg}
-      \caption{Cryoclastie}
-    \end{figure}
-  \end{center}
-  \begin{center}
-    \begin{figure}
-      \includegraphics[width=7.4cm]{Images/Diapos/Alteration/Physique/haloclastie3.jpg}
-      \caption{Haloclastie}
+      \caption{Exemple du phénomène de cryoclastie}
     \end{figure}
   \end{center}
 \end{frame}
 
 \subsection{Les altérations chimiques}
 \begin{frame}
-  \begin{center}
-    \begin{figure}
-      \includegraphics[width=7cm]{Images/Diapos/Alteration/Chimiques/hydrolyse.png}
-      \caption{Hydratation de molécules de sodium et de potassium.}
-    \end{figure}
-  \end{center}
   \begin{center}
     \begin{figure}
       \includegraphics[width=5cm]{Images/Diapos/Alteration/Chimiques/hydrolyse.jpeg}
@@ -81,17 +69,16 @@
 
 \subsection{Le ruissellement et l'érosion fluviale}
 \begin{frame}
+ \begin{center}
   \begin{figure}
-    \includegraphics[width=5cm]{Images/Diapos/Erosion/Fluviale/bad_lands.jpg}
-    \includegraphics[width=6cm]{Images/Diapos/Erosion/Fluviale/n_base.jpg}
-    \caption{Ruissellement et érosion verticale}
+    \includegraphics[width=4cm]{Images/Diapos/Erosion/Fluviale/bad_lands.jpg}
+    \caption{Les « Badlands »}
   \end{figure}
-  \begin{center}
-    \begin{figure}
-      \includegraphics[width=2cm]{Images/Diapos/Erosion/Fluviale/solixfluxion.jpg}
-      \caption{Solifluxion}
-    \end{figure}
-  \end{center}
+  \begin{figure}
+    \includegraphics[width=4cm]{Images/Diapos/Erosion/Fluviale/n_base.jpg}
+    \caption{Schéma de l'érosion verticale}
+  \end{figure}
+ \end{center}
 \end{frame}
 
 \subsection{L'érosion karstique}
@@ -100,7 +87,7 @@
     \begin{figure}[h]
       \includegraphics[width=5.35cm]{Images/Diapos/Erosion/Karstique/dolines.jpg}
       \includegraphics[width=4cm]{Images/Diapos/Erosion/Karstique/erosion-karstique-fig04.jpg}
-      \caption{Dolines et grotte souterraine dus à l'érosion karstique.}
+      \caption{Dolines et grottes souterraines}
     \end{figure}
   \end{center}
 \end{frame}
