Utilisation de sous figures dans la partie pour l'erosion.

--- a/Beamer/Diapo.tex
+++ b/Beamer/Diapo.tex
@@ -51,7 +51,7 @@
 \begin{frame}
   \begin{center}
     \begin{figure}
-      \includegraphics[width=4.5cm]{Images/Diapos/Alteration/Physique/cryoclastie.jpg}
+      \includegraphics[width=6cm]{Images/Diapos/Alteration/Physique/cryoclastie.jpg}
       \caption{Exemple du phénomène de cryoclastie}
     \end{figure}
   \end{center}
@@ -72,12 +72,8 @@
 \begin{frame}
  \begin{center}
   \begin{figure}
-    \includegraphics[width=4cm]{Images/Diapos/Erosion/Fluviale/bad_lands.jpg}
-    \caption{Les « Badlands »}
-  \end{figure}
-  \begin{figure}
-    \includegraphics[width=4cm]{Images/Diapos/Erosion/Fluviale/n_base.jpg}
-    \caption{Schéma de l'érosion verticale}
+    \subfigure[Les « Badlands »]{\includegraphics[height=3cm]{Images/Diapos/Erosion/Fluviale/bad_lands.jpg}}
+    \subfigure[Schéma de l'érosion verticale]{\includegraphics[height=3cm]{Images/Diapos/Erosion/Fluviale/n_base.jpg}}
   \end{figure}
  \end{center}
 \end{frame}
@@ -97,7 +93,7 @@
 \begin{frame}
   \begin{center}
     \begin{figure}
-      \includegraphics[width=8cm]{Images/Diapos/Erosion/Glaciaire/Erosion_glaciaire_Bourque4B.png}
+      \includegraphics[width=7cm]{Images/Diapos/Erosion/Glaciaire/Erosion_glaciaire_Bourque4B.png}
       \caption{Schéma de l'érosion glaciaire}
     \end{figure}
   \end{center}
