--- a/Beamer/entete_beamer_pdflatex.tex
+++ b/Beamer/entete_beamer_pdflatex.tex
@@ -64,7 +64,7 @@
 \AtBeginSection[]
 {
   \begin{frame}
-    \frametitle{sommaire}
+    \frametitle{Sommaire}
     \begin{multicols}{2}
       {\small
         \tableofcontents[currentsection, hideothersubsections]}
