--- a/Beamer/entete_beamer_pdflatex.tex
+++ b/Beamer/entete_beamer_pdflatex.tex
@@ -57,6 +57,10 @@
 \usepackage{multimedia}		% Vidéos dans la présentation
 %\usepackage{movie15}
 
+%Ajout d'images de fond:
+\usepackage{eso-pic}
+\usepackage{wallpaper}
+
 \usepackage{ccicons}		% Licence creativecommons
 
 %\SIdecimalsign{,}
