Ajout de la diapo de remerciements

--- a/Beamer/Diapo.tex
+++ b/Beamer/Diapo.tex
@@ -161,11 +161,14 @@
 \begin{frame}
 	\begin{center}
 		\begin{figure}
+		\begin{figure}
 			\includegraphics[width=6cm]{Images/Images_Alexis/glacier_reculon.png}
-			\includegraphics[width=4cm]{Images/Images_Alexis/glaciers_img3.png}
+			\includegraphics[width=3cm]{Images/Images_Alexis/glaciers_img3.png}
 		\end{figure}
+		\caption{Les ères glaciaires successives ont grandement participé au façonnage de nos paysages.}
 		\begin{figure}
 			\includegraphics[width=6cm]{Images/Images_Alexis/gresivaudan.jpg}
+		\end{figure}
 		\end{figure}
 	\end{center}
 \end{frame}
@@ -189,7 +192,8 @@
 \begin{frame}
  \begin{center}
   \begin{figure}
-   \includegraphics[width=10cm]{Images/Images_Alexis/voronoi.png}
+	 \LARGE \ul{Les cellules de Voronoi}
+   \includegraphics[width=9cm]{Images/Images_Alexis/voronoi.png}
   \end{figure}
 
  \end{center}
@@ -202,7 +206,7 @@
 \begin{frame}
  \begin{center}
   \begin{figure}
-   Voxels \& Boxels
+   \Large \ul{Voxels \& Boxels}
    \includegraphics[width=6cm]{Images/Images_Alexis/voxel_teapot.jpg}
    \includegraphics[width=6cm]{Images/Images_Alexis/example_matricielle.jpg}
   \end{figure}
@@ -556,6 +560,20 @@
 \end{frame}
 
 \section{Conclusion}
+
+\subsection{Remerciements}
+\begin{frame}
+	\begin{center}
+	 \Huge Merci Pour votre attention
+	 
+	 \begin{figure}
+		\Large Place aux questions
+	  \includegraphics[width=5cm]{Images/interrogation.jpg}
+	 \end{figure}
+
+	 
+	\end{center}
+\end{frame}
 
 
 \end{document}
